# my_live_info

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml  daily.yml  pages.yml
db/: schema.sql
docs/superpowers/plans/: 2026-04-20-live-info.md
docs/superpowers/specs/: 2026-04-20-live-info-design.md
live_info/: config.py  diff.py  models.py  run.py
live_info/crawlers/: maoyan.py
live_info/db/: client.py  repositories.py
live_info/llm/: alias_resolver.py  client.py  verifier.py
live_info/notifiers/: base.py  dispatcher.py  email.py  feishu.py  renderer.py
scripts/: build_web_config.py
tests/: conftest.py  test_alias_resolver.py  test_build_web_config.py  test_config.py  test_diff.py  test_dispatcher.py  test_llm_client.py  test_maoyan.py  test_models.py  test_notifiers.py  test_renderer.py  test_repositories.py  test_verifier.py
tests/fixtures/: llm_verify.json  maoyan_detail.json  maoyan_search.json
web/: .gitignore  README.md  app.js  components.json  index.html  package-lock.json  package.json  styles.css  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: App.vue
web/src/assets/: main.css
web/src/components/: Toast.vue
web/src/components/ui/button/: Button.vue  variants.ts
web/src/components/ui/card/: Card.vue  (+5 more)
web/src/lib/: crypto.ts  supabase.ts  utils.ts
web/src/router/: index.ts
web/src/stores/: auth.ts  data.ts  toast.ts
web/src/types/: config.d.ts
web/src/views/: AppLayout.vue  ArtistsView.vue  ConcertsView.vue  LoginView.vue  SubscriptionsView.vue  UsersView.vue
(+11 files in other folders)
